--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ beautifulsoup4==4.12.2
 googlesearch_python==1.2.3
 lxml==4.9.2
 nltk==3.8.1
-Requests==2.28.2
+Requests==2.30.0
 sentence_transformers==2.2.2
 streamlit==1.21.0
 streamlit_lottie==0.0.3
 torch==2.0.0
 transformers==4.28.1
+accelerate
